keep playing - still need search filtering, new geocoder, info windows and extended info

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="venueRight">
                 <span data-bind="text: veg_level_description" class="vegLevel"></span><br>
                 <span data-bind="text: cuisines[0]" class="cuisine"></span>
-              </idv>
+              </div>
               <div class="venueExtra">
 
               </div>
