--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input data-bind="value: location" type="text" placeholder="enter a city">
       <div data-bind="visible: locationError" class="error">location not found</div>
     </div>
-    <div data-bind="visible: results().length > 0" id="info-window">
+    <div id="info-window">
       <div id="result-search">
         <button data-bind="click: toggleResults" id="info-toggle" type="button">
           <span data-bind="text: resultsToggle"></span>
@@ -25,6 +25,7 @@
         <input data-bind="value: filter" type="text" placeholder="search by restaurant name, type of cuisine, etc.">
       </div>
       <div data-bind="visible: resultsVisible" id="result-list">
+        <span data-bind="visible: self.results() <= 0" class="resultError">Failed to load any results</span>
         <ul data-bind="foreach: filteredResults">
           <li data-bind="click: $parent.listClick">
             <hr>
@@ -42,7 +43,7 @@
         </ul>
       </div>
     </div>
-    <div data-bind="visible: results().length > 0" id="legend">
+    <div id="legend">
       <img src="img/lisa.png"> Lisa<br>
       <img src="http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=5|00e500|000000"> Vegan<br>
       <img src="http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=4|00cc00|000000"> Vegetarian<br>
